src/test/ui/issues/issue-32004.stderr
error[E0532]: expected unit struct/variant or constant, found tuple variant `Foo::Bar`
  --> $DIR/issue-32004.rs:10:9
   |
LL |         Foo::Bar => {}
   |         ^^^^^---
   |              |
   |              help: a unit variant with a similar name exists: `Baz`

error[E0532]: expected tuple struct/variant, found unit struct `S`
  --> $DIR/issue-32004.rs:16:9
   |
LL |         S(()) => {}
   |         ^ not a tuple struct/variant

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
